# tg-speech-to-text

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  RASPBERRY_PI_SETUP.md  README.md  build.sh  deploy.md  docker-compose.yml  fly.toml  rust-toolchain.toml
data/: authorized_users.json  authorized_users.json.example
src/: handlers.rs  main.rs  persistence.rs  queue.rs  request_logger.rs
src/audio/: convert.rs  mod.rs
src/stt/: deepgram.rs  elevenlabs.rs  google.rs  mod.rs  whisper.rs
